--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <div class="select-tip">
                 <p>Select Tip %</p>
                 <div class="porcentages">
-                    <input type="radio" name="tips" id="5%" value="5/100">
+                    <input type="radio" name="tips" id="5%" value="0.05">
                     <label for="5%">5%</label>
-                    <input type="radio" name="tips" id="10%" value="10/100">
+                    <input type="radio" name="tips" id="10%" value="0.1">
                     <label for="10%">10%</label>
-                    <input type="radio" name="tips" id="15%" value="15/100">
+                    <input type="radio" name="tips" id="15%" value="0.15">
                     <label for="15%">15%</label>
-                    <input type="radio" name="tips" id="25%" value="25/100" >
+                    <input type="radio" name="tips" id="25%" value="0.25" >
                     <label class="responsive" for="25%">25%</label>
-                    <input type="radio" name="tips" id="50%" value="50/100">
+                    <input type="radio" name="tips" id="50%" value="0.5">
                     <label class="responsive" for="50%">50%</label>
                     <input class="responsive" type="number" name="" id="custom" placeholder="Custom">
                 </div>
