--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Bill</p>
                 <div class="dolar-input">
                     <img src="images/icon-dollar.svg" alt=""> 
-                    <input type="number" name="" id="dolar-number" placeholder="0">
+                    <input type="number" name="input" id="dolar-number" placeholder="0">
                 </div>
             
             </div>
@@ -37,7 +37,7 @@
                     <label class="responsive" for="25%">25%</label>
                     <input type="radio" name="tips" id="50%" value="0.5">
                     <label class="responsive" for="50%">50%</label>
-                    <input class="responsive" type="number" name="" id="custom" placeholder="Custom">
+                    <input class="responsive" type="number" name="customized" id="custom" placeholder="Custom">
                 </div>
                 
             </div>
